# SimplePlatformer

./: CMakeLists.txt
src/: Action.cpp  Action.h  Animation.cpp  Animation.h  Assets.cpp  Assets.h  AssetsLoad.txt  Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  GameEngine.cpp  GameEngine.h  LevelScene.cpp  LevelScene.h  MainMenuScene.cpp  MainMenuScene.h  Physics.cpp  Physics.h  Scene.cpp  Scene.h  main.cpp
